# universal-crawler

./: .gitignore  LICENSE  PROJECT_COMPLETION_SUMMARY.md  PROJECT_STATUS.md  README.md  main.py  pyproject.toml  pyrightconfig.json  test_svg_fix.py  test_url_filtering.py
src/crawl4dev/: __init__.py  __main__.py  crawler.py  install_playwright.py
tests/: __init__.py  test_cli.py  test_core_functionality.py  test_crawler_comprehensive.py  test_directory_creation.py
